--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -120,8 +120,8 @@
 	<div class="_BVPrimarySummaryContainer">
 		<div class="_BVOverallRatingContainer"></div>
 		<div class="_BVHistorgramWidgetContainer"></div>
-		<div class="_BVRecommendedContainerAverage"></div>
 		<div class="_BVButtonWriteReviewContainer"></div>
+		<span class="BVButtonSeparator"> | </span>
 		<div class="_BVButtonReadReviewsContainer"></div>
 		<div class="BVSortContainer">
 			<div class="_BVSortInputWrapper"></div>
