--- a/css/bazaarvoiceUniversal.css
+++ b/css/bazaarvoiceUniversal.css
@@ -31,11 +31,12 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 
 
 /* PRIMARY SUMMARY */
-	#BVRRPrimarySummaryContainer {float: left; overflow: hidden; position: relative; top: 7px;}
+	#BVRRPrimarySummaryContainer {float: left; position: relative; top: 7px;}
 		._BVPrimarySummaryContainer ._BVOverallRatingContainer {float: left; overflow: hidden; margin-right: 10px;}
 
-		._BVPrimarySummaryContainer ._BVButtonWriteReviewContainer {float: left; clear: none; padding-right: 5px; margin-right: 5px;}
-		._BVPrimarySummaryContainer ._BVButtonReadReviewsContainer {float: left; clear: none;}
+		._BVPrimarySummaryContainer ._BVButtonWriteReviewContainer {float: left; clear: none; margin-right: 5px;}
+		._BVPrimarySummaryContainer ._BVButtonReadReviewsContainer {float: left; clear: none; margin-left:  5px;}
+	.BVButtonSeparator {float: left;}
 
 
 
@@ -67,7 +68,6 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 
 	._BVButtonSubmitContainer a._BVButton, ._BVButtonPreviewContainer a._BVButton {font-size: 14px;}
 
-
 /* RATINGS */
 
 	/* Filled & Unfilled Images - SVG scaling */
@@ -88,7 +88,8 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 
 	/* Popin */
 	a.BVHistogramLauncher, a.BVHistogramLauncher:hover, a.BVHistogramLauncher:active, a.BVHistogramLauncher:focus {border: 0 none !important; text-decoration: none !important;}
-	._BVHistorgramWidgetContainer {width: 290px; margin: 20px 0 0; border: 1px solid #C3C4C4; padding: 30px; background-color: #fff; border-radius: 4px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.3); display: none; position: absolute;}
+	._BVHistorgramWidgetContainer {width: 290px; margin: 20px 0 0; border: 1px solid #C3C4C4; padding: 30px; background-color: #fff; border-radius: 4px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.3); display: none; position: absolute; z-index: 1000;}
+		._BVPrimarySummaryContainer ._BVHistorgramWidgetContainer {margin-top: 35px;}
 		
 		._BVHistorgramWidgetContainer ._BVHistogramLableText {width: 90px; height: 17px; display: block; float: left; background: url(images/histogramStars.png); margin-right: 10px;}
 			._BVHistorgramWidgetContainer ._BVHistogramLableText span {height: 17px; display: block; background: url(images/histogramStars.png) 0 -17px; text-indent: -999em; outline: none;}
