--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -117,8 +117,10 @@
 <!-- universal primary summary template -->
 <script id="bvtemplate-primary-summary-universal" type="html">
 	<div class="_BVPrimarySummaryContainer">
-		<div class="_BVOverallRatingContainer"></div>
-		<div class="_BVHistorgramWidgetContainer"></div>
+		<a href="#BVPrimarySummaryHistogramID" class="BVHistogramLauncher">
+			<div class="_BVOverallRatingContainer"></div>
+		</a>
+		<div id="BVPrimarySummaryHistogramID" class="_BVHistorgramWidgetContainer"></div>
 		<div class="_BVButtonWriteReviewContainer"></div>
 		<span class="BVButtonSeparator"> | </span>
 		<div class="_BVButtonReadReviewsContainer"></div>
