--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -1103,4 +1103,18 @@
 	</div>
 </script>
 
+
+<!-- ********** MISC ********** -->
+
+<!-- GENERAL -->
+
+<!-- product image template -->
+<script id="bvtemplate-overlay-loading-generic-universal" type="html">
+	<div class="_BVOverlayLoadingContainer">
+		<img src="" data-img-url="images/bvLoading.gif" alt="" border="0" />
+		<div class="BVLoadingText">Loading...</div>
+	</div>
+</script>
+
+
 </div>
