--- a/css/bazaarvoiceUniversal.css
+++ b/css/bazaarvoiceUniversal.css
@@ -78,7 +78,7 @@
 
 	/* Popin */
 	a.BVHistogramLauncher, a.BVHistogramLauncher:hover, a.BVHistogramLauncher:active, a.BVHistogramLauncher:focus {border: 0 none !important; text-decoration: none !important;}
-	._BVHistorgramWidgetContainer {width: 290px; margin: 20px 0 0; border: 1px solid #C3C4C4; padding: 30px; background-color: #fff; border-radius: 4px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.3); display: none; position: absolute; behavior: url(../includes/PIE-1.0.0/PIE.htc);}
+	._BVHistorgramWidgetContainer {width: 290px; margin: 20px 0 0; border: 1px solid #C3C4C4; padding: 30px; background-color: #fff; border-radius: 4px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.3); display: none; position: absolute; z-index: 1000; behavior: url(../includes/PIE-1.0.0/PIE.htc);}
 		._BVPrimarySummaryContainer ._BVHistorgramWidgetContainer {margin: 35px 0 0 -122px;}
 		
 		._BVHistorgramWidgetContainer ._BVHistogramLableText {width: 90px; height: 17px; display: block; float: left; background: url(images/histogramStars.png); margin-right: 10px;}
